# promptfiles

./: .editorconfig  .gitattributes  .gitignore.promptfiles  .markdownlintignore  .tool-versions  CONTRIBUTING.md  LICENCE.md  Makefile  README.md  lychee.toml  project.code-workspace
.github/: contributing.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: copilot-auto-fix.yml
.github/agents/: speckit.analyze.agent.md  speckit.clarify.agent.md  speckit.implement.agent.md  speckit.plan.agent.md  speckit.specify.agent.md  speckit.tasks.agent.md  speckit.taskstoissues.agent.md
.github/instructions/: docker.instructions.md  go.instructions.md  makefile.instructions.md  playwright-python.instructions.md  playwright-typescript.instructions.md  python.instructions.md  reactjs.instructions.md  readme.instructions.md  rust.instructions.md  shell.instructions.md  tauri.instructions.md  terraform.instructions.md  typescript.instructions.md
.github/instructions/templates/: Dockerfile.template  Makefile.template  pyproject.toml  shell-script.template.sh
.github/prompts/: architecture.01-repository-map.prompt.md  architecture.02-component-catalogue.prompt.md  architecture.03-runtime-flows.prompt.md  architecture.04-domain-analysis.prompt.md  architecture.05-c4-model.prompt.md  architecture.06-infrastructure-diagram.prompt.md  codebase-01-repository-map.prompt.md  codebase-02-component-catalogue.prompt.md  codebase-03-runtime-flows.prompt.md  codebase-04-domain-analysis.prompt.md  (+55 more)
docs/: .gitignore
scripts/: apply.sh  count-tokens.py  init.mk  patch-speckit.sh
(+71 files in other folders)
